# math_library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci-cd.yml  static.yml
include/: AddFuncs.h  AddScalarFuncs.h  All.h  Dimension.h  Graphics.h  InstructionSet.h  InstructionSetFloat.h  Matrix.h  MulScalarFuncs.h  MultiplyFuncs.h  Options.h  Point.h  Vector.h  vec3.h
include/math_library/: all.h  dimension.h  graphics.h  matrix.h  point.h  quaternion.h  vector.h
scripts/: GenerateSIMDdefines.cpp  generate_simd_defines.cpp
src/exe/: benchmarks.h  main.cpp  tests.h
src/lib/options/: Options.h  options.h
src/lib/simd/instruction_set/: InstructionSet.h  InstructionSetDouble.h  InstructionSetFloat.h  InstructionSetInt.h  instruction_set.h  instruction_set_double.h  instruction_set_float.h  instruction_set_int.h  instruction_set_int32.h  instruction_set_uint32.h  instruction_set_uint32_t.h  instruction_set_unsigned_int.h
src/lib/simd/precompiled/: .gitkeep
src/lib/utils/: Concepts.h  concepts.h  utils.h
